# nublado

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.base  Dockerfile.controller  Dockerfile.cst-landing  Dockerfile.fsadmin  Dockerfile.hub  Dockerfile.inithome  Dockerfile.jupyterhub  Dockerfile.jupyterlab-base  Dockerfile.purger  Dockerfile.repo-cloner  Dockerfile.rsp-initcontainer  Dockerfile.sciplat-lab  Dockerfile.utils  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  ruff-shared.toml  setup.cfg  tox.ini
authenticator/: README.md  pyproject.toml
authenticator/src/rubin/nublado/authenticator/: __init__.py  _internals.py
controller/: README.md  noxfile.py  pyproject.toml
controller/requirements/: dev.in  dev.txt  main.in  main.txt
controller/scripts/: install-dependency-packages.sh  start.sh
controller/src/controller/: __init__.py  background.py  config.py  constants.py  events.py  exceptions.py  factory.py  main.py  templates.py  timeout.py  units.py  util.py
controller/src/controller/assets/: form_template.txt
controller/src/controller/dependencies/: config.py  context.py  user.py
controller/src/controller/handlers/: files.py  fileserver.py  form.py  fsadmin.py  index.py  labs.py  prepuller.py  user_status.py
controller/src/controller/models/: index.py
controller/src/controller/models/domain/: arch_filter.py  fileserver.py  form.py  fsadmin.py  gafaelfawr.py  image.py  imagefilterpolicy.py  imagepolicy.py  kubernetes.py  lab.py  menu.py  registryimage.py  rspimage.py  rspimagetype.py  rsptag.py
controller/src/controller/models/v1/: fileserver.py  fsadmin.py  lab.py  prepuller.py  prepuller_config.py
controller/src/controller/services/: _state.py  fileserver.py  form.py  fsadmin.py  image.py  lab.py  prepuller.py  releasedater.py  size.py
controller/src/controller/services/builder/: fileserver.py  fsadmin.py  lab.py  prepuller.py  volumes.py
controller/src/controller/services/source/: base.py  docker.py  gar.py
controller/src/controller/storage/: docker.py  gafaelfawr.py  gar.py  util.py
controller/src/controller/storage/kubernetes/: creator.py  custom.py  deleter.py  fileserver.py  fsadmin.py  ingress.py  lab.py  namespace.py  node.py  pod.py  pv.py  watcher.py
controller/src/controller/templates/: fileserver.html.jinja  spawner.html.jinja
controller/tests/: config_test.py  conftest.py  exceptions_test.py  units_test.py
controller/tests/data/base/input/: discovery.json  users.json
controller/tests/data/changed-path/input/: config.yaml
controller/tests/data/cycle/input/: config.yaml
controller/tests/data/extra-annotations/input/: config.yaml
controller/tests/data/fileserver/input/: config.yaml
controller/tests/data/fileserver/output/: fileserver-objects.json  fileserver.html
controller/tests/data/fsadmin/input/: config.yaml
controller/tests/data/gar-cycle/input/: config.yaml
controller/tests/data/gar/input/: config.yaml  known-images.json
controller/tests/data/homedir-schema/input/: config.yaml
controller/tests/data/multi-nfs/input/: rachel-lab.json  wrench-lab.json
controller/tests/data/nfs-pvc/input/: config.yaml
controller/tests/data/prepuller/input/: config.yaml  nodes.json
controller/tests/data/prepuller/output/: status.json
controller/tests/data/releasedater/: releases.json
controller/tests/data/sizes/input/: config.yaml
controller/tests/data/sizes/output/: lab-form.html
controller/tests/data/standard/input/: config.yaml
controller/tests/data/standard/output/: fileserver.txt  lab-form.html  lab-objects.json  lab-recreate-events.json  lab-status.json  prepull-conflict-objects.json  prepull-objects.json  prepulls.json
controller/tests/data/tmp-disk/input/: config.yaml
controller/tests/handlers/: files_test.py  fileserver_test.py  form_test.py  fsadmin_test.py  index_test.py  labs_test.py  prepuller_test.py  user_status_test.py
controller/tests/models/domain/: arch_filter_test.py  gafaelfawruserinfo_test.py  imagefilter_test.py  rspimage_test.py  rsptag_test.py
controller/tests/models/v1/: lab_test.py
controller/tests/services/: lab_test.py  prepuller_test.py  releasedater_test.py  size_test.py
controller/tests/storage/: docker_test.py
controller/tests/storage/kubernetes/: node_test.py
controller/tests/support/: config.py  data.py  docker.py  gafaelfawr.py  kubernetes.py
hub/: README.md  noxfile.py  pyproject.toml
hub/plugins/authenticator/: pyproject.toml
hub/plugins/authenticator/src/rubin/nublado/authenticator/: _internals.py
hub/plugins/spawner/: README.md  pyproject.toml
hub/plugins/spawner/src/rubin/nublado/spawner/: __init__.py  (+3 more)
hub/requirements/: dev.in  dev.txt  main.in  main.txt
hub/scripts/: install-packages.sh
hub/templates/: page.html
hub/tests/: authenticator_test.py  conftest.py  spawner_test.py
hub/tests/data/: discovery.json
hub/tests/data/progress/: conflict.json  failure.json  success.json
hub/tests/support/: controller.py  jupyterhub.py
inithome/: pyproject.toml
inithome/requirements/: dev.in  dev.txt  main.in  main.txt
inithome/src/rubin/nublado/inithome/: main.py  provisioner.py
inithome/tests/: conftest.py  inithome_test.py
jupyterlab-base/: README.md  pyproject.toml
jupyterlab-base/jupyter_server/: jupyter_server_config.json  jupyter_server_config.py
jupyterlab-base/profile.d/: local01-cd.sh  local06-cd.sh
jupyterlab-base/runtime/: runlab
jupyterlab-base/scripts/: fix-texlive  generate-versions  install-base-packages  install-compat  install-dependency-packages  install-jupyterlab  install-node-packages  install-system-files  make-user
jupyterlab-base/src/rubin/nublado/startup/: __init__.py  _constants.py  _launch.py
jupyterlab-base/static/etc/profile.d/: local01-cd.sh  local06-term.sh
spawner/: README.md  pyproject.toml
spawner/requirements/: dev.txt  main.in  main.txt
spawner/src/rubin/nublado/spawner/: __init__.py  _exceptions.py  _internals.py  _models.py
spawner/tests/: conftest.py  spawner_test.py
spawner/tests/support/: controller.py
(+951 files in other folders)
