[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "nublado-jupyterhub"
description = "Customized JupyterHub for Nublado."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "jupyterhub==5.4.2",
    "jupyterhub-idle-culler>=1",
    "psycopg2>=2",
    "rubin-nublado-authenticator",
    "rubin-nublado-spawner",
    # Zero-to-JupyterHub unconditionally imports this, so we have to have it
    # installed even though we're using a different spawner class.
    "kubernetes-asyncio",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://nublado.lsst.io"
Source = "https://github.com/lsst-sqre/nublado"
"Change log" = "https://nublado.lsst.io/changelog.html"
"Issue tracker" = "https://github.com/lsst-sqre/nublado/issues"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
    "respx",
    "rubin-repertoire",
]
nox = [
    "nox",
    "nox-uv",
]
typing = [
    "mypy>=1.15",
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.run]
parallel = true
branch = true
source = ["rubin.nublado.authenticator", "rubin.nublado.spawner"]

[tool.coverage.paths]
source = ["plugins/authenticator/src", "plugins/spawner/src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests.  We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = ["tests/*.py", "tests/*/*.py"]

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
root = ".."

[tool.uv]
required-environments = [
    "sys_platform == 'manylinux' and platform_machine == 'x86_64'",
    "sys_platform == 'manylinux' and platform_machine == 'aarch64'",
]

[tool.uv.sources]
rubin-nublado-authenticator = { workspace = true }
rubin-nublado-spawner = { workspace = true }

[tool.uv.workspace]
members = ["plugins/*"]
