[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "rubin.nublado.spawner"
description = "JupyterHub spawner using Nublado lab controller REST API."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "httpx<1",
    "httpx-sse<1",
    "jupyterhub<6",
    "rubin-repertoire>=0.6,<1",
    "traitlets<6",
]
dynamic = ["version"]

[project.entry-points."jupyterhub.spawners"]
nublado = "rubin.nublado.spawner:NubladoSpawner"

[project.urls]
Homepage = "https://nublado.lsst.io"
Source = "https://github.com/lsst-sqre/nublado"
"Change log" = "https://nublado.lsst.io/changelog.html"
"Issue tracker" = "https://github.com/lsst-sqre/nublado/issues"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
root = "../../.."
